name:                maintainable-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/m-arnold/maintainable-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Adlai Arnold
maintainer:          michaelaarnold@gmail.com
copyright:           MIT License
category:            Software
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable maintainable-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , maintainable-haskell
  default-language:    Haskell2010

test-suite maintainable-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , maintainable-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/m-arnold/maintainable-haskell
